# n_puzzle

./: Algorithms.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  README.md
file_to_copy/: comments_puzzle.txt  last_test.txt  puzzle_tab.txt
src/core/Algorithms/: SearchAlgorithm.cpp  SearchAlgorithm.h
src/core/Algorithms/AStar/: AStar.cpp  AStar.h
src/core/Algorithms/IDAStar/: IDAStar.cpp  IDAStar.h
src/core/Metrics/: Metrics.cpp  Metrics.h
src/core/Node/: Node.cpp  Node.h
src/core/PuzzleParser/: PuzzleParser.cpp  PuzzleParser.h
src/core/Solver/: Solver.cpp  Solver.h
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/maths/: Algorithms.cpp  Algorithms.h
test/: desordonate.txt  empty_lines.txt  npuzzle-3-1.txt  npuzzle-4-1.txt  puzzle5_test.txt  puzzle_space.txt  puzzle_test.txt  space_tab.txt  special_char.txt  test-4.txt  test_6.txt
